Forgot password email whitespace and error message changes, members list avatar image width fix

--- a/src/app/member-edit/member-edit.component.scss
+++ b/src/app/member-edit/member-edit.component.scss
@@ -76,6 +76,7 @@
       width: 180px;
       border-radius: 50%;
       border: 6px solid white;
+      object-fit: cover;
     }
     .status {
       padding: 5px 10px;
